[package]
name = "aoc-2023"
version = "0.1.0"
edition = "2021"

[dependencies]
itertools = "0.12.0"
num_enum = "0.7.1"
scanfmt = "0.1.0"
either = "1.9.0"
num-bigint = "0.4.4"
num-integer = "0.1.45"
float-ord = "0.3.2"
generic-cursors = "0.0.1"
serde = { version = "1.0.193", features = ["derive"] }
serde_json = "1.0.108"
regex = "1.7.0"
rand = "0.8.5"
#set-union = { version = "0.1.0", path = "../../rust/set-union" }
replace_with = "0.1.7"
enum-map = "2.4.2"
bytemuck = { version = "1.12.3", features = ["extern_crate_std", "min_const_generics", "derive"] }
enumflags2 = { version = "0.7.5", features = ["std"] }
zachs18-stdx = "0.1.1"
rayon = "1.8.0"
indexmap = "2.1.0"
derive_more = "0.99.17"
glam = "0.25.0"
z3 = "0.12.1"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies.aoc_driver]
features = ["local_cache"]
version = "0.3.6"
# git = "https://github.com/zachs18/aoc_driver/"
# branch = "local_cache"
# path = "../../rust/aoc_driver"

[profile.release]
overflow-checks = true
debug = true

[lints.clippy]
# PreParsed requires the solution functions to take exactly a reference the parsed type,
# and when the parsed type is Vec, clippy complains that the functions could take a slice reference.
ptr_arg = "allow"
# When the length of the slice is different from the length of the range,
# this can change the semantics of the loop, and/or decrease readability.
needless_range_loop = "allow"
